--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -139,7 +139,7 @@ sans-serif;
               </td>
               <td>
                 〒<%= @user.zipcode %><br>
-                <%= @user.municipality %>
+                <%= @user.prefecture %><%= @user.municipality %><%= @user.address %><%= @user.apartments %>
               </td>
             </tr>
             <tr>
