--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,71 +1,73 @@
 <% provide(:title, "注文詳細") %>
-<% if @order.present? %>
-  <div class="mt-5 container">
-    <div class="jumbotron bg-white">
-      <div class="card border-dark">
-        <div class="cord-body ml-3">
-          <h4 class="mt-4">お届け先</h4>
-          <p class="ml-3">〒<%= @order.user.zipcode %>　<%= @order.user.prefecture + @order.user.municipality + @order.user.address %>　<%= @order.user.apartments %></p>
-          <p class="offset-sm-2"><%= @order.user.last_name %><%= @order.user.first_name %>様</p>
+<main>
+  <% if @order.present? %>
+    <div class="mt-5 container">
+      <div class="jumbotron bg-white">
+        <div class="card border-dark">
+          <div class="cord-body ml-3">
+            <h4 class="mt-4">お届け先</h4>
+            <p class="ml-3">〒<%= @order.user.zipcode %>　<%= @order.user.prefecture + @order.user.municipality + @order.user.address %>　<%= @order.user.apartments %></p>
+            <p class="offset-sm-2"><%= @order.user.last_name %><%= @order.user.first_name %>様</p>
+          </div>
         </div>
-      </div>
-      <div class="mt-5 ml-3">
-        <p>注文番号：<%= @order.order_number %></p>
-        <% if @order.order_details.any? { |order_detail| order_detail.shipment_status_id == 1 } %>
-          <p>注文状態：準備中</p>
-        <% else %>
-          <p>注文状態：発送中</p>
-        <% end %>
-      </div>
-      <div class="text-end">
-        <button type="button" class="btn btn-danger">注文をキャンセルする</button>
-      </div>
-      <table class="table table-borderless mt-3">
-        <thead>
-          <tr>
-            <th scope="col" class="border-top border-bottom">No</th>
-            <th scope="col" class="border-top border-bottom">商品名</th>
-            <th scope="col" class="border-top border-bottom">商品カテゴリ</th>
-            <th scope="col" class="border-top border-bottom">値段</th>
-            <th scope="col" class="border-top border-bottom">個数</th>
-            <th scope="col" class="border-top border-bottom">小計</th>
-            <th scope="col" class="border-top border-bottom">備考</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @sum = 0 %>
-          <% @order.order_details.each_with_index do |order_detail, i| %>
-            <tr>
-              <th scope="row"><%= "#{i+1}" %></th>
-              <td><%= order_detail.product.product_name %></td>
-              <td><%= order_detail.product.category.category_name %></td>
-              <td><%= order_detail.product.price %>円</td>
-              <td><%= order_detail.order_quantity %>　個</td>
-              <td><%= order_detail.product.price*order_detail.order_quantity %>円</td>
-              <td>注文状態：<%= order_detail.shipment_status.shipment_status_name %></td>
-            </tr>
-            <% @sum += order_detail.product.price*order_detail.order_quantity %>
+        <div class="mt-5 ml-3">
+          <p>注文番号：<%= @order.order_number %></p>
+          <% if @order.order_details.any? { |order_detail| order_detail.shipment_status_id == 1 } %>
+            <p>注文状態：準備中</p>
+          <% else %>
+            <p>注文状態：発送中</p>
           <% end %>
-        </tbody>
-      </table>
-      <div class="border-top border-dark">
-        <div class="mt-2 offset-sm-6">
-          <p class="ml-4">合計　　　　　<%= @sum %>円</p>
+        </div>
+        <div class="text-end">
+          <button type="button" class="btn btn-danger">注文をキャンセルする</button>
+        </div>
+        <table class="table table-borderless mt-3">
+          <thead>
+            <tr>
+              <th scope="col" class="border-top border-bottom">No</th>
+              <th scope="col" class="border-top border-bottom">商品名</th>
+              <th scope="col" class="border-top border-bottom">商品カテゴリ</th>
+              <th scope="col" class="border-top border-bottom">値段</th>
+              <th scope="col" class="border-top border-bottom">個数</th>
+              <th scope="col" class="border-top border-bottom">小計</th>
+              <th scope="col" class="border-top border-bottom">備考</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @sum = 0 %>
+            <% @order.order_details.each_with_index do |order_detail, i| %>
+              <tr>
+                <th scope="row"><%= "#{i+1}" %></th>
+                <td><%= order_detail.product.product_name %></td>
+                <td><%= order_detail.product.category.category_name %></td>
+                <td><%= order_detail.product.price %>円</td>
+                <td><%= order_detail.order_quantity %>　個</td>
+                <td><%= order_detail.product.price*order_detail.order_quantity %>円</td>
+                <td>注文状態：<%= order_detail.shipment_status.shipment_status_name %></td>
+              </tr>
+              <% @sum += order_detail.product.price*order_detail.order_quantity %>
+            <% end %>
+          </tbody>
+        </table>
+        <div class="border-top border-dark">
+          <div class="mt-2 offset-sm-6">
+            <p class="ml-4">合計　　　　　<%= @sum %>円</p>
+          </div>
+        </div>
+        <div class="text-end mb-5">
+          <button type="button" class="btn btn-info">注文履歴に戻る</button>
         </div>
       </div>
-      <div class="text-end mb-5">
-        <button type="button" class="btn btn-info">注文履歴に戻る</button>
+    </div>
+  <% else %>
+    <div class="container">
+      <div class="jumbotron text-center bg-white"></div>
+      <div class="mt-5 text-center">
+        <h1>該当の注文は見つかりませんでした…</h1>
+        <p class="mt-5">注文履歴画面に戻り、やり直してください</p>
+        <button type="button" class="btn btn-primary">注文履歴へ</button>
       </div>
     </div>
-  </div>
-<% else %>
-  <div class="container">
-    <div class="jumbotron text-center bg-white"></div>
-    <div class="mt-5 text-center">
-      <h1>該当の注文は見つかりませんでした…</h1>
-      <p class="mt-5">注文履歴画面に戻り、やり直してください</p>
-      <button type="button" class="btn btn-primary">注文履歴へ</button>
     </div>
-  </div>
-  </div>
-<% end %>
+  <% end %>
+</main>
