--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -35,9 +35,9 @@
           </thead>
           <tbody>
             <% @sum = 0 %>
-            <% @order.order_details.each_with_index do |order_detail, i| %>
+            <% @order.order_details.each.with_index(1) do |order_detail, i| %>
               <tr>
-                <th scope="row"><%= "#{i+1}" %></th>
+                <th scope="row"><%= "#{i}" %></th>
                 <td><%= order_detail.product.product_name %></td>
                 <td><%= order_detail.product.category.category_name %></td>
                 <td><%= order_detail.product.price %>円</td>
