--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,111 +3,59 @@
   <h2 class="text-center mt-5">ユーザ情報修正</h2>
   <table width="50%" style="margin-left:350px">
     <%= form_with model: @user do |form| %>
+
     <tr height="40">
       <td align="center">
           氏名
-        姓<%= form.text_field :last_name %><span style="float: right">名<%= form.text_field :first_name %></span>
+        <%= form.label :first_name, "姓" %>
+        <%= form.text_field :first_name %>
+        <span style="float: right">
+        <%= form.label :last_name, "名" %>
+        <%= form.text_field :last_name %>
+        </span>
       </td>
-      <%
-=begin%>
- <td>
-        <input type="text" style="margin-left:10px" maxlength="10" required><span
-          style="margin-right:35px"></span>名<input type="text" style="margin-left:10px" maxlength="10" required>
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
       <td align="center">
         住所<span style="float: right">〒<%= form.text_field :zipcode, :size => "50" %></span>
       </td>
-      <%
-=begin%>
- <td colspan="2">
-        <input type="text" style="margin-left:10px" size="25" pattern="\d{3}-?\d{4}" required>
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
       <td align="right">
         都道府県<%= form.text_field :prefecture, :size => "50" %>
       </td>
-      <%
-=begin%>
- <td colspan="2">
-        <input type="text" style="margin-left:10px" size="50" maxlength="5" required>
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
       <td align="right">
         市町村区<%= form.text_field :municipality, :size => "50" %>
       </td>
-      <%
-=begin%>
- <td colspan="2">
-        <input type="text" style="margin-left:10px" size="50" maxlength="10" required>
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
       <td align="right">
         番地<%= form.text_field :address, :size => "50" %>
       </td>
-      <%
-=begin%>
- <td colspan="2">
-        <input type="text" style="margin-left:10px" size="50" maxlength="15" required>
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
       <td align="center">
         マンション部屋番号<%= form.text_field :apartments, :size => "50" %><td align="left"><br></br>
       </td>
-
-      <%
-=begin%>
- <td colspan="2">
-        <input type="text" style="margin-left:10px" size="50" maxlength="20" required>
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
       <td align="center">
         メールアドレス<%= form.email_field :email, :size => "50" %>
       </td>
-      <%
-=begin%>
- <td colspan="2">
-        <input type="email" style="margin-left:10px" size="65">
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
       <td align="center">
         電話番号<%= form.telephone_field :phone_number, :size => "50" %>
       </td>
-      <%
-=begin%>
- <td colspan="2">
-        <input type="text" style="margin-left:10px" size="65" pattern="(^[0-9]+$){1,15}" required>
-      </td>
-<%
-=end%>
     </tr>
 
     <tr height="40">
@@ -134,8 +82,7 @@
     <div class="col-5 offset-2">
       <button class="btn btn-danger" type="submit">退会</button>
     </div>
-      <%= form.submit %>
-    <% end %>
 
+    <% end %>
   </div>
 </main>
