--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -42,7 +42,7 @@
                 <td><%= order_detail.product.category.category_name %></td>
                 <td><%= order_detail.product.price %>円</td>
                 <td><%= order_detail.order_quantity %>　個</td>
-                <td><%= order_detail.product.price*order_detail.order_quantity %>円</td>
+                <td><%= order_detail.subtotal %>円</td>
                 <td>注文状態：<%= order_detail.shipment_status.shipment_status_name %></td>
               </tr>
               <% @sum += order_detail.product.price*order_detail.order_quantity %>
