--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -34,7 +34,6 @@
             </tr>
           </thead>
           <tbody>
-            <% @sum = 0 %>
             <% @order.order_details.each.with_index(1) do |order_detail, i| %>
               <tr>
                 <th scope="row"><%= "#{i}" %></th>
@@ -45,13 +44,12 @@
                 <td><%= order_detail.subtotal %>円</td>
                 <td>注文状態：<%= order_detail.shipment_status.shipment_status_name %></td>
               </tr>
-              <% @sum += order_detail.product.price*order_detail.order_quantity %>
             <% end %>
           </tbody>
         </table>
         <div class="border-top border-dark">
           <div class="mt-2 offset-sm-6">
-            <p class="ml-4">合計　　　　　<%= @sum %>円</p>
+            <p class="ml-4">合計　　　　　<%= @order.total_amount %>円</p>
           </div>
         </div>
         <div class="text-end mb-5">
