--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,17 +10,20 @@
             <p class="offset-sm-2"><%= @order.user.last_name %><%= @order.user.first_name %>様</p>
           </div>
         </div>
-        <div class="mt-5 ml-3">
-          <p>注文番号：<%= @order.order_number %></p>
-          <% if @order.order_details.any? { |order_detail| order_detail.shipment_status_id == 1 } %>
+        <% if @order.order_preparing %>
+          <div class="mt-5 ml-3">
+            <p>注文番号：<%= @order.order_number %></p>
             <p>注文状態：準備中</p>
-          <% else %>
+          </div>
+          <div class="text-end">
+            <button type="button" class="btn btn-danger">注文をキャンセルする</button>
+          </div>
+        <% else %>
+          <div class="mt-5 ml-3">
+            <p>注文番号：<%= @order.order_number %></p>
             <p>注文状態：発送中</p>
-          <% end %>
-        </div>
-        <div class="text-end">
-          <button type="button" class="btn btn-danger">注文をキャンセルする</button>
-        </div>
+          </div>
+        <% end %>
         <table class="table table-borderless mt-3">
           <thead>
             <tr>
