--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,7 +1,7 @@
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <title><%= full_title(yield(:title)) %></title> 
+  <title><%= full_title(yield(:title)) %></title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
@@ -21,6 +21,8 @@
       /*flexboxのみだと横並びに。これで縦並び */
       position: relative;
       /*←相対位置*/
+      padding-top: 70px;
+      /*←headerの高さ*/
       padding-bottom: 70px;
       /*←footerの高さ*/
       box-sizing: border-box;
@@ -39,6 +41,9 @@ sans-serif;
     header {
       background-color: #ffe040;
       z-index: 10;
+      position: fixed;
+      top: 0;
+      width: 100%;
       /* 要素の重なり順序指定 */
     }
 
@@ -69,7 +74,9 @@ sans-serif;
       width: 100%;
       background-color: #ffe040;
       position: absolute;
+      /*←絶対位置*/
       bottom: 0;
+      /*下に固定*/
     }
 
     footer h1 {
