--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -52,7 +52,7 @@
         </table>
         <div class="border-top border-dark">
           <div class="mt-2 offset-sm-6">
-            <p class="ml-4">合計　　　　　<%= @order.total_amount %>円</p>
+            <p class="ml-4">合計　　　　　<%= @order.total_price %>円</p>
           </div>
         </div>
         <div class="text-end mb-5">
