退会をコメントアウト処理

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -92,8 +92,12 @@
       </div>
     </div>
 
-    <div class="col-5 offset-2">
+    <%
+=begin%>
+ <div class="col-5 offset-2">
       <%= form.submit "退会", class: "btn btn-primary" %>
+<%
+=end%>
 
     </div>
 
