ログインパス関連コメントアウト

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -88,7 +88,8 @@
           </div>
         <% end %>
         <div class="mt-5 text-center">
-          <h3><%= link_to "ログインはこちらから", login_path %></h3>
+        <%# ログインページができたら以下のコメントアウトを外す %>
+          <%#= link_to "ログインはこちらから", login_path %>
         </div>
       </div>
     </div>
