--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -88,7 +88,7 @@
           </div>
         <% end %>
         <div class="mt-5 text-center">
-        <%# ログインページができたら以下のコメントアウトを外す %>
+        <!-- TODO: ログインページができたら以下のコメントアウトを外す -->
           <%#= link_to "ログインはこちらから", login_path %>
         </div>
       </div>
