--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -88,8 +88,7 @@
           </div>
         <% end %>
         <div class="mt-5 text-center">
-        <!-- TODO: ログインページができたら以下のコメントアウトを外す -->
-          <%#= link_to "ログインはこちらから", login_path %>
+          <%= link_to "ログインはこちらから", login_path %>
         </div>
       </div>
     </div>
