--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
             
             <%= f.label :name, "郵便番号" %>
             <div class="col-sm-6 ms-4">
-              <%= f.text_field :zipcode, class: "form-control", pattern: "[1-9][0-9]*", length: "7" %>
+              <%= f.text_field :zipcode, class: "form-control", length: "8" %>
             </div>
             <div>
               <p class="mb-1">住所</p>
@@ -66,19 +66,19 @@
           <div>
             <%= f.label :phone_number, "電話番号" %>
             <div class="ml-3 mr-5 ms-4">
-              <%= f.telephone_field :phone_number, class: "form-control", pattern: "[1-9][0-9]*", maxlength: "15" %>
+              <%= f.telephone_field :phone_number, class: "form-control", maxlength: "15" %>
             </div>
           </div>
           <div>
             <%= f.label :password, "パスワード" %>
             <div class="col-sm-8 ms-4">
-              <%= f.password_field :password, class: "form-control", pattern: "^[0-9A-Za-z]+$", minlength: '6', maxlength: '15' %>
+              <%= f.password_field :password, class: "form-control", minlength: '6', maxlength: '15' %>
             </div>
           </div>
           <div>
             <%= f.label :password_confirmation, "パスワード再入力" %>
             <div class="col-sm-8 ms-4">
-              <%= f.password_field :password_confirmation, class: "form-control", pattern: "^[0-9A-Za-z]+$", minlength: '6', maxlength: '15' %>
+              <%= f.password_field :password_confirmation, class: "form-control", minlength: '6', maxlength: '15' %>
             </div>
           </div>
           <div class="row justify-content-center">
