--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -74,11 +74,7 @@
     <div class="container">
       <nav aria-label="...">
         <ul class="pagination justify-content-center">
-          <li class="page-item active">
-            <a class="page-link" href="#">1<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li><%= paginate @products %></li>
         </ul>
       </nav>
     </div>
