--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -36,7 +36,7 @@
     </div>
 
     <div class="container">
-      <p>全<%= @products.count %>件</p>
+      <p>全<%= @products_count %>件</p>
       <table class="table table-hover" border="1" style="border-collapse: collapse">
         <thead>
           <tr class=" table-header">
@@ -114,7 +114,7 @@
     </div>
 
     <div class="container">
-      <p>全<%= @products.count %>件</p>
+      <p>全<%= @products_count %>件</p>
       <table class="table table-hover" border="1" style="border-collapse: collapse">
         <thead>
           <tr>
