--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
               </div>
             </div>
             
-            <%= f.label :name, "郵便番号" %>
+            <%= f.label :zipcode, "郵便番号" %>
             <div class="col-sm-6 ms-4">
               <%= f.text_field :zipcode, class: "form-control", length: "8" %>
             </div>
