--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -27,9 +27,11 @@
         <div class="col-sm-4">
           <select id="exampleFormControlSelect2" class="form-control">
             <option selected>未選択</option>
-            <% @categories.each do |category| %>
-              <option><%= category.category_name %></option>
-            <% end %>
+            <option>食材品</option>
+            <option>生活用品</option>
+            <option>消耗品</option>
+            <option>嗜好品</option>
+            <option>医薬品</option>
           </select>
         </div>
       </div>
