--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -38,7 +38,7 @@
     </div>
 
     <div class="container">
-      <p>全<%= @products_count %>件</p>
+      <p>全<%= @products.total_count %>件</p>
       <table class="table table-hover" border="1" style="border-collapse: collapse">
         <thead>
           <tr class=" table-header">
