--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,42 +1,42 @@
 <% provide(:title, "商品検索") %>
 <main>
-  <% if @products.present? %>
-    <div class="mt-5 mx-auto" style="width: 200px">
-      <h2>商品検索画面</h2>
-    </div>
+  <div class="mt-5 mx-auto" style="width: 200px">
+    <h2>商品検索画面</h2>
+  </div>
 
-    <div class="container mt-5">
-      <form action="#" method="post">
-        <div class="mx-auto row">
-          <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">商品名</label>
-          <div class="col-sm-6">
-            <input type="text" class="form-control form-control-lg" id="colFormLabelLg" required />
-          </div>
-          <div class="col-sm-4 mt-1">
-            <button type="submit" class="btn btn-primary" style="width: 80px">
-              検索
-            </button>
-          </div>
-        </div>
-      </form>
-    </div>
-
-    <div class="container">
+  <div class="container mt-5">
+    <form action="#" method="post">
       <div class="mx-auto row">
-        <label class="col-sm-2 col-form-label col-form-label-lg" for="exampleFormControlSelect2">商品カテゴリ</label>
-        <div class="col-sm-4">
-          <select id="exampleFormControlSelect2" class="form-control">
-            <option selected>未選択</option>
-            <option>食材品</option>
-            <option>生活用品</option>
-            <option>消耗品</option>
-            <option>嗜好品</option>
-            <option>医薬品</option>
-          </select>
+        <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">商品名</label>
+        <div class="col-sm-6">
+          <input type="text" class="form-control form-control-lg" id="colFormLabelLg" required />
+        </div>
+        <div class="col-sm-4 mt-1">
+          <button type="submit" class="btn btn-primary" style="width: 80px">
+            検索
+          </button>
         </div>
       </div>
-    </div>
+    </form>
+  </div>
 
+  <div class="container">
+    <div class="mx-auto row">
+      <label class="col-sm-2 col-form-label col-form-label-lg" for="exampleFormControlSelect2">商品カテゴリ</label>
+      <div class="col-sm-4">
+        <select id="exampleFormControlSelect2" class="form-control">
+          <option selected>未選択</option>
+          <option>食材品</option>
+          <option>生活用品</option>
+          <option>消耗品</option>
+          <option>嗜好品</option>
+          <option>医薬品</option>
+        </select>
+      </div>
+    </div>
+  </div>
+
+  <% if @products.present? %>
     <div class="container">
       <p>全<%= @products.total_count %>件</p>
       <table class="table table-hover" border="1" style="border-collapse: collapse">
@@ -81,42 +81,9 @@
       </nav>
     </div>
   <% else %>
-    <div class="mt-5 mx-auto" style="width: 200px">
-      <h2>商品検索画面</h2>
-    </div>
-
-    <div class="container mt-5">
-      <form action="#" method="post">
-        <div class="mx-auto row">
-          <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">商品名</label>
-          <div class="col-sm-6">
-            <input type="text" class="form-control form-control-lg" id="colFormLabelLg" required />
-          </div>
-          <div class="col-sm-4 mt-1">
-            <button type="submit" class="btn btn-primary" style="width: 80px">
-              検索
-            </button>
-          </div>
-        </div>
-      </form>
-    </div>
 
     <div class="container">
-      <div class="mx-auto row">
-        <label class="col-sm-2 col-form-label col-form-label-lg" for="exampleFormControlSelect2">商品カテゴリ</label>
-        <div class="col-sm-4">
-          <select id="exampleFormControlSelect2" class="form-control">
-            <option selected>未選択</option>
-            <% @categories.each do |category| %>
-              <option><%= category.category_name %></option>
-            <% end %>
-          </select>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <p>全<%= @products_count %>件</p>
+      <p>全<%= @products.total_count %>件</p>
       <table class="table table-hover" border="1" style="border-collapse: collapse">
         <thead>
           <tr>
