#25 ユーザー情報更新

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,8 +2,12 @@
 <main>
   <h2 class="text-center mt-5">ユーザ情報修正</h2>
   <table width="50%" style="margin-left:350px">
-    <%= form_with model: @user do |form| %>
-
+    <%
+=begin%>
+ <%= form_with model: @user do |form| %>
+<%
+=end%>
+    <%= form_with model: @user, url: user_path, local: true do |form| %>
     <tr height="40">
       <td align="center">
           氏名
