--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,7 @@
     <div class="row mb-5 ml-5">
       <div class="col-sm-6 offset-sm-3">
         <%= form_with model: @user, url: sign_up_path, local: true do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
           <div>
             <p>氏名</p>
             <div class="row ms-2">
