--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
           <a class="nav-link text-dark" href="#">注文履歴</a>
           <a class="nav-link text-dark" href="#">ユーザ情報</a>
           <a class="nav-link text-dark" href="#">ログアウト</a>
-          <%= link_to "Log out", logout_path %>
+          <%= link_to 'ログアウト', logout_path, method: :delete %>
         </ul>
       </div>
     </div>
