edit.html.erb 修正

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,12 +2,7 @@
 <main>
   <h2 class="text-center mt-5">ユーザ情報修正</h2>
   <table width="50%" style="margin-left:350px">
-    <%
-=begin%>
- <%= form_with model: @user do |form| %>
-<%
-=end%>
-    <%= form_with model: @user, url: user_path, local: true do |form| %>
+    <%= form_with model: @user, url: @user, local: true do |form| %>
     <tr height="40">
       <td align="center">
           氏名
