--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <%= render 'layouts/flash' %>
+    <%= render 'layouts/flash_massages' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
   </body>
