--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,6 +53,8 @@
   </section>
 
   <div class="text-center">
-    <a class="btn btn-primary" href="#" role="button">修正/退会する</a>
+    <%= link_to edit_user_path do %>
+      <button class="btn btn-primary" >修正/退会する</button>
+    <% end %>
   </div>
 </main>
