--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,16 +10,16 @@
             <p><%= @current_user.first_name %><%= @current_user.last_name %>さん</p>
           </ul>
           <ul class="navbar-nav">
-            <li><%= link_to "商品検索", products_path %></li>
+            <li><%= link_to "商品検索", products_path, class: "nav-link text-dark" %></li>
             <a class="nav-link text-dark" href="#">カート</a>
             <a class="nav-link text-dark" href="#">注文履歴</a>
-            <li><%= link_to "ユーザー情報", @current_user %></li>
-            <%= link_to "ログアウト", logout_path, method: :delete %>
+            <li><%= link_to "ユーザー情報", @current_user, class: "nav-link text-dark" %></li>
+            <%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link text-dark" %>
           </ul>
         <% else %>
           <ul class="navbar-nav">
-            <%= link_to "ログイン", login_path %>
-            <%= link_to "新規登録", sign_up_path %>
+            <%= link_to "ログイン", login_path, class: "nav-link text-dark" %>
+            <%= link_to "新規登録", sign_up_path, class: "nav-link text-dark" %>
           </ul>
         <% end %>
       </div>
