--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <div>
         <% if logged_in? %>
           <ul>
-            <p><%= @current_user.first_name %><%= @current_user.last_name %>さん</p>
+            <p><%= @current_user.last_name %><%= @current_user.first_name %>さん</p>
           </ul>
           <ul class="navbar-nav">
             <li><%= link_to "商品検索", products_path, class: "nav-link text-dark" %></li>
