--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,8 +53,6 @@
   </section>
 
   <div class="text-center">
-    <%= link_to edit_user_path do %>
-      <button class="btn btn-primary" >修正/退会する</button>
-    <% end %>
+    <%= link_to '修正/退会する', edit_user_path, class: "btn btn-primary" %>
   </div>
 </main>
