--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,19 +5,17 @@
   </div>
 
   <div class="container mt-5">
-    <form action="#" method="post">
+    <%= form_with url: products_path, method: :get, local: true do |f| %>
       <div class="mx-auto row">
         <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">商品名</label>
         <div class="col-sm-6">
-          <input type="text" class="form-control form-control-lg" id="colFormLabelLg" required />
+          <%= f.text_field :keyword, value: "#{params[:keyword]}", class: "form-control form-control-lg", id: "colFormLabelLg" %>
         </div>
         <div class="col-sm-4 mt-1">
-          <button type="submit" class="btn btn-primary" style="width: 80px">
-            検索
-          </button>
+          <%= f.submit "検索", class: "btn btn-primary", style: 'width: 80px' %>
         </div>
       </div>
-    </form>
+    <% end %>
   </div>
 
   <div class="container">
