--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,8 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <div class="navbar-nav me-auto">
-        <h1><a class="nav-link navbar-brand" href="#">探求学園Rails専攻</a></h1>
+        <h1>
+        <%= link_to '探求学園Rails専攻', root_path, class: "nav-link navbar-brand" %>
       </div>
       <div>
         <% if logged_in? %>
