--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <div class="navbar-nav me-auto">
-        <h1>
-        <%= link_to '探求学園Rails専攻', root_path, class: "nav-link navbar-brand" %>
+        <h1><%= link_to '探求学園Rails専攻', root_path, class: "nav-link navbar-brand" %></h1>
       </div>
       <div>
         <% if logged_in? %>
