--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "探求学園Rails専攻 ECサイト") %>
+<% provide(:title, "TOP画面") %>
   <h1 class="mt-5 text-center">探求学園Rails専攻 ECサイト</h1>
 <main>
   <% if logged_in? %>
