--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -86,10 +86,10 @@
   <div class="row mt-5">
     <div class="col-5">
       <div class="d-flex justify-content-end">
-        <%= link_to "修正",user_path(@current_user.id), class: "btn btn-primary" %>
+        <%= link_to "修正",edit_user_path(@current_user.id), class: "btn btn-primary" %>
       </div>
     </div>
-        <%= link_to "退会",edit_user_path(@current_user.id), class: "btn btn-primary", method: :delete, data: { confirm: "ユーザーデータが全て削除されます。本当に退会しますか？" } %>
+        <%= link_to "退会",user_path(@current_user.id), class: "btn btn-primary", method: :delete, data: { confirm: "ユーザーデータが全て削除されます。本当に退会しますか？" } %>
     </div>
     <% end %>
   </div>
