--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -90,6 +90,7 @@
       </div>
     </div>
         <%= link_to "退会",user_path(@current_user.id), class: "btn btn-primary", method: :delete, data: { confirm: "ユーザーデータが全て削除されます。本当に退会しますか？" } %>
+    <div class="col-5 offset-2">
     </div>
     <% end %>
   </div>
