ページ遷移

--- a/app/views/orders/purchase_completed.html.erb
+++ b/app/views/orders/purchase_completed.html.erb
@@ -7,6 +7,6 @@
     <p class="h1">注文番号:<%= @order.order_number %></p>
   </div>
   <div class="container text-center mt-5">
-    <a href="#" class="btn btn-primary mt-5">Topに戻る</a>
+    <%= link_to "Topに戻る", root_path, class: "btn btn-primary mt-5" %>
   </div>
 </main>
