ゲストログイン ボタンを追加

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -21,6 +21,7 @@
           お持ちの方はこちら
         </p>
         <%= link_to 'ログイン', login_path, class: "btn btn-primary" %>
+        <%= link_to 'ゲストログイン', guest_sign_in_path, method: :post, class: "btn btn-primary" %>
       </div>
     </div>
   <% end %>
