edit.html.erb にunless 文を追加

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -82,7 +82,7 @@
     </tr>
 
   </table>
-      <% unless user.email == 'guest@example.com' %>
+      <% unless ensure_normal_user.email == 'guest@example.com' %>
         <div class="row mt-5">
           <div class="col-5">
             <div class="d-flex justify-content-end">
