--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -82,24 +82,19 @@
     </tr>
 
   </table>
-      <% unless ensure_normal_user.email == 'guest@example.com' %>
-        <div class="row mt-5">
-          <div class="col-5">
-            <div class="d-flex justify-content-end">
-              <%= form.submit "修正", class: "btn btn-primary" %>
-            </div>
-          </div>
-
-  <div class="row mt-5">
-    <div class="col-5">
-      <div class="d-flex justify-content-end">
-        <%= link_to "修正",edit_user_path(@current_user.id), class: "btn btn-primary" %>
+      <% if @user.email == 'guest@example.com'%>
+      <% else %>
+      <div class="row mt-5">
+      <div class="col-5">
+        <div class="d-flex justify-content-end">
+          <%= form.submit "修正", class: "btn btn-primary" %>
+        </div>
       </div>
-    </div>
-    <div class="col-5 offset-2">
-      <%= link_to "退会",user_path(@current_user.id), class: "btn btn-primary", method: :delete, data: { confirm: "ユーザーデータが全て削除されます。本当に退会しますか？" } %>
+
+      <div class="col-5 offset-2">
+        <%= link_to "退会",user_path(@current_user.id), class: "btn btn-primary", method: :delete, data: { confirm: "ユーザーデータが全て削除されます。本当に退会しますか？" } %>
+      </div>
+      <% end %>
     </div>
     <% end %>
-  </div>
-    <% end %>
-</main>
+  </main>
