--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
           <p class="mt-4 mb-5">価格：<%= @product.price %>円</p>
         </div>
         <%= form_with url: add_cart_path, local: true do |f| %>
-        <%= f.hidden_field :product_id, :value => @product.id %>
+        <%= f.hidden_field :product_id, value: @product.id %>
           <div class="row justify-content-center">
             <%= f.label :order_quantity, "購入個数", class: "mt-1 col-sm-1" %>
             <div class="col-sm-1">
