rubocop指摘の修正

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -82,7 +82,7 @@
     </tr>
 
   </table>
-      <% if @user.email == 'guest@example.com'%>
+      <% if @user.email == "guest@example.com"%>
       <% else %>
       <div class="row mt-5">
       <div class="col-5">
