routes書き方変更

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -55,7 +55,7 @@
                 <td class="align-middle">
                   <%= cart[:price] %>円
                 </td>
-                <%= form_with url: cart_path, method: :patch, local: true do |f| %>
+                <%= form_with url: carts_update_path, method: :patch, local: true do |f| %>
                 <%= f.hidden_field :product_id, value: cart[:product_id] %>
                   <td class="align-middle">
                       <%= f.number_field :quantity, value: cart[:quantity], class: "btn btn-outline-dark", pattern: "[1-9][0-9]*", min: 1, required: true %>&nbsp;&nbsp;個
@@ -64,7 +64,7 @@
                     <%= cart[:sub_total] %> 円
                   </td>
                 <% end %>
-                <%= form_with url: cart_path, method: :delete, local: true do |f| %>
+                <%= form_with url: carts_destroy_path, method: :delete, local: true do |f| %>
                 <%= f.hidden_field :product_id, value: cart[:product_id] %>
                   <td class="border-0 align-middle">
                     <%= f.submit "削除", class: "btn btn-danger" %>
