--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
           </ul>
           <ul class="navbar-nav">
             <%= link_to "商品検索", products_path, class: "nav-link text-dark" %>
-            <%= link_to "カート", "/carts/show", class: "nav-link text-dark" %>
+            <%= link_to "カート", carts_show_path, class: "nav-link text-dark" %>
             <a class="nav-link text-dark" href="#">注文履歴</a>
             <%= link_to "ユーザー情報", @current_user, class: "nav-link text-dark" %>
             <%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link text-dark" %>
