ゲストログインボタンを非表示、path の変更

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,8 +54,10 @@
       </div>
     </section>
 
-    <div class="text-center">
-      <%= link_to '修正/退会する', edit_user_path, class: "btn btn-primary" %>
-    </div>
+    <% if !guest_user? %>
+      <div class="text-center">
+        <%= link_to '修正/退会する', edit_user_path, class: "btn btn-primary" %>
+      </div>
+    <% end %>
 
   </main>
